--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -20,6 +20,6 @@ jobs:
     - name: npm install, build
       run: |
         npm install
-        ng run build --outputPath=docs
+        ng build --outputPath=docs
       env:
         CI: true
