--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -1,25 +1,19 @@
 name: bulid github pages
 
-on: [push]
+on:
+  push:
+    branches:
+    - master
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build
-      run: |
-        npm install
-        ng build --outputPath=docs
-      env:
-        CI: true
+        node-version: '10.x'
+    - run: npm install
+    - run: npm build
