--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -11,9 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-node@v1
+    
+    - name: Checkout master for use with actions
+      uses: actions/checkout@master
+      
+    - name: Setup Node.js for use with actions
+      uses: actions/setup-node@v1.1.0
       with:
         node-version: '10.x'
-    - run: npm install
-    - run: npm run build
+        
+    - name: Install dependencies 
+      run: npm install
+      
+    - name: Build
+      run: npm run build
+      
+    - name: Ng
+      run: ng version
