--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "@pixelmon/pikachu": "^0.1.9-1fe75e7",
+    "@pixelmon/pikachu": "0.1.9-1fe75e7",
     "ng-zorro-antd": "^8.3.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
