--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -22,6 +22,7 @@ jobs:
         
     - name: Install dependencies 
       run: npm install
+           npm i @pixelmon/pikachu@0.1.9-1fe75e7
       
     - name: Build
       run: npm run build
