--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -22,7 +22,9 @@ jobs:
         
     - name: Install dependencies 
       run: npm install
-           npm i @pixelmon/pikachu@0.1.9-1fe75e7
+      
+    - name: Install dependencies 
+      run: npm install @pixelmon/pikachu@0.1.9-1fe75e7
       
     - name: Build
       run: npm run build
