--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     
-    - name: Checkout master for use with actions
+    - name: Checkout master
       uses: actions/checkout@master
       
-    - name: Setup Node.js for use with actions
+    - name: Setup Node.js
       uses: actions/setup-node@v1.1.0
       with:
         node-version: '10.x'
@@ -23,11 +23,11 @@ jobs:
     - name: Install dependencies 
       run: npm install
       
-    - name: Display the path
-      run: echo ${env:PATH}
-      shell: pwsh
+   - name: Display the path
+      run: echo ${PATH}
+      shell: bash
       
-    - name: Build
-      run: git push
+    - name: Push to master
+      run: git push origin HEAD:master
       
 
