--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -13,20 +13,16 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@master
 
-      - name: 111
-        run: git switch -c master
+      - name: Checkout master
+        run: git switch -c origin/master
 
       - name: Setup Node.js
         uses: actions/setup-node@v1.1.0
         with:
           node-version: "10.x"
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Display the path
-        run: echo ${PATH}
-        shell: bash
+      # - name: Install dependencies
+      #   run: npm install
 
       - name: Push to master
-        run: git push origin HEAD:master
+        run: git push -u origin master
