--- a/.github/workflows/bulid-github-pages.yml
+++ b/.github/workflows/bulid-github-pages.yml
@@ -25,4 +25,6 @@ jobs:
       #   run: npm install
 
       - name: Push to master
+        run: git config user.email "zomixi@qq.com"
+        run: git config user.name "zomixi"
         run: git push -u origin master
