--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@pixelmon/chart": "^0.2.0",
     "@pixelmon/pikachu": "*",
     "ng-zorro-antd": "^8.3.0",
     "rxjs": "^6.5.2",
