--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "@pixelmon/chart": "^0.2.0",
-    "@pixelmon/pikachu": "*",
+    "@pixelmon/chart": "^0.2.1",
+    "@pixelmon/pikachu": "^0.2.1",
     "ng-zorro-antd": "^8.3.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
